test_regress/t/t_constraint_global_nested_unsup.out
%Error-UNSUPPORTED: t/t_constraint_global_nested_unsup.v:9:14: Unsupported: Variable 'm_mid.m_inner' cannot have multiple global constraints
                                                             : ... note: In instance 't'
    9 |   constraint c_inner { m_val inside {[1:10]}; }
      |              ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
